--- a/main.css
+++ b/main.css
@@ -33,9 +33,10 @@ body {
 }
 
 .gallery__loader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .gallery__card {
@@ -46,6 +47,7 @@ body {
     border-radius: 5px;
     outline: 0.1rem solid transparent;
     box-shadow:  0 4px 8px 0 rgba(0,0,0,0.2);
+    overflow: hidden;
 }
 
 .gallery__card.liked-card {
@@ -54,6 +56,7 @@ body {
 
 .gallery__image__container {
     position: relative;
+    overflow: hidden;
 }
 
 .gallery__image__container > img.gallery__image {
@@ -80,8 +83,7 @@ body {
 
 @media (min-width: 400px) {
     .gallery__image__container > img.gallery__image:not([data-src]):hover {
-        transform: scale(1.1);
-        box-shadow:  0 4px 8px 0 rgba(0,0,0,0.2);
+        transform: scale(1.3);
         border-radius: 0;
     }
 }
