--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@ body {
 .gallery__grid {
     justify-content: space-evenly;
     display: grid;
+    grid-gap: 1em;
     grid-template-columns: repeat(auto-fit, minmax(auto, 350px));
 }
 
@@ -39,19 +40,29 @@ body {
     transform: translate(-50%, -50%);
 }
 
+
+.gallery__loader__msg {
+    display: inline-block;
+    margin: 20px auto;
+}
+
 .gallery__card {
     display: flex;
     flex-direction: column;  
     background-color: white;
     margin: 5px;
     border-radius: 5px;
-    outline: 0.1rem solid transparent;
     box-shadow:  0 4px 8px 0 rgba(0,0,0,0.2);
     overflow: hidden;
 }
 
+.gallery__card {
+    outline: 2px solid transparent;
+    transition: outline 400ms ease;
+}
+
 .gallery__card.liked-card {
-    background-color: blue;
+    outline: 2px solid red;
 }
 
 .gallery__image__container {
@@ -72,6 +83,12 @@ body {
     transition-timing-function: ease;
 }
 
+@media (min-width: 400px) {
+    .gallery__image__container > img.gallery__image:hover {
+        transform: scale(1.3);
+    }
+}
+
 .gallery__image__container > img.gallery__image__placeholder {
    position: absolute;
    top: 50%;
@@ -81,15 +98,9 @@ body {
    width: 40px;
 }
 
-@media (min-width: 400px) {
-    .gallery__image__container > img.gallery__image:not([data-src]):hover {
-        transform: scale(1.3);
-        border-radius: 0;
-    }
-}
 
 .gallery__card__data {
-    padding: 10px;
+    padding: 0px 20px 20px 20px;
 }
 
 .gallery__card__date {
@@ -99,13 +110,51 @@ body {
 
 .gallery__card__like-btn  {
     width: 50px;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    transition: transform 400ms ease;
+}
+
+/* Proper outline on tab-based focus for accessibility. */
+.gallery__card__like-btn:focus-visible  {
+    outline: 2px solid green;
 }
 
 
-.gallery__card__like-btn--filled {
-    /* TODO: Add heart button svgs (filled and outlined) */
+/* Assign svg icons to the buttons depending if the card is liked or not. */
+.gallery__card__like-btn::before {
+    cursor: pointer;
+    content: url('heart-outline.svg');
 }
 
-.gallery__card__like-btn--outlined {
-    /* TODO: Add heart button svgs (filled and outlined) */
+.liked-card .gallery__card__like-btn::before {
+    content: url('heart-filled.svg');
+    cursor: pointer;
 }
+
+/* Animation for like (heart) button */
+@keyframes breathe {
+    0% {
+        transform: scale(1);
+        filter: hue-rotate(0);
+    } 
+
+    50% {
+        transform: scale(1.3);
+        filter: hue-rotate(-90deg);
+    }
+
+    100% {
+        transform: scale(1);
+        filter: hue-rotate(0);
+    }
+}
+
+.gallery__card__like-btn:hover {
+    animation: breathe 2s ease;
+    animation-iteration-count: infinite;
+}
+
+
+
